--- a/first/style.css
+++ b/first/style.css
@@ -3,11 +3,12 @@ html, body {
 	width: 100%;
 }
 
-.foo {
-	width: 70%;
-	height: 15%;
+footer {
+	margin-top: 900px;
+	width: 100%;
+	height: 100px;
 	background-color: Black;
-	clear: both;
+	/*clear: both;*/
 }
 
 .foo2 {
